fixes chevron spacing for version number

--- a/static/header.less
+++ b/static/header.less
@@ -84,9 +84,6 @@
             padding-top: 7px;
             font-size: 12px;
             cursor: pointer;
-            .version-number {
-                display: flex;
-            }
             .version-number::after {
                 display: inline-block;
                 width: 15px;
